stu service update